--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
-
+*.exe
+*.pdb
 # =========================
 # Operating System Files
 # =========================
